Complete header section: add headshot, update tagline, add background image

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <!-- Header/Hero Section -->
     <header class="hero">
         <div class="container">
+            <img src="content/headshot.jpg" alt="Ryan Condon headshot" class="hero-image">
             <h1 class="hero-title">Ryan Condon</h1>
-            <p class="hero-subtitle">Mathematics • Technology • Strategic Thinking</p>
+            <p class="hero-subtitle">Professional Magic Player • Data Architect • Collaborative Problem Solver</p>
         </div>
     </header>
 
