Complete Experience section: detailed tournament results, consulting work, and career history

--- a/index.html
+++ b/index.html
@@ -54,23 +54,64 @@
                             <h3 class="experience-title">Professional Magic: The Gathering Player</h3>
                             <span class="experience-date">2023 - Present</span>
                         </div>
-                        <p class="experience-description">Competitive play and strategic analysis at professional level tournaments.</p>
+                        <ul class="experience-list">
+                            <li>Top finishes at the highest levels of tournament play:
+                                <ul class="experience-sublist">
+                                    <li>2nd place, Arena Championship 5, Online (32 competitors, 2024)</li>
+                                    <li>18th place, World Championship 30, Las Vegas (113 competitors, 2024)</li>
+                                    <li>27th place, Pro Tour Aetherdrift, Chicago (348 competitors, 2025)</li>
+                                    <li>24th place, Pro Tour Edge of Eternities, Atlanta (300 competitors, 2025)</li>
+                                </ul>
+                            </li>
+                            <li>Popular strategy writer & content creator on <a href="https://patreon.com/ryancmtg" target="_blank" rel="noopener noreferrer">Patreon</a></li>
+                            <li>Member of Sanctum of All Admin team, managing a team of 200+ players at all levels of competitive play</li>
+                        </ul>
                     </div>
 
                     <div class="experience-item">
                         <div class="experience-header">
-                            <h3 class="experience-title">Physics Lab Consultant</h3>
-                            <span class="experience-date">Recent</span>
+                            <h3 class="experience-title">Technical Consultant</h3>
+                            <span class="experience-date">August 2024 - Present</span>
                         </div>
-                        <p class="experience-description">Developed Python-based physics simulation lab for research and analysis.</p>
+                        <ul class="experience-list">
+                            <li>Built Python-based physics simulation lab for testing putt-solving algorithms on real-world greens</li>
+                            <li>Developing application for professional putting coaches</li>
+                            <li>Collaborative project with former Qeepsake COO</li>
+                        </ul>
                     </div>
 
                     <div class="experience-item">
                         <div class="experience-header">
-                            <h3 class="experience-title">Previous Professional Experience</h3>
-                            <span class="experience-date">Various</span>
+                            <h3 class="experience-title">Business Intelligence Architect</h3>
+                            <span class="experience-date">June 2022 - January 2024</span>
                         </div>
-                        <p class="experience-description">Data analysis, SQL development, and technical problem-solving roles.</p>
+                        <p class="experience-company">Qeepsake</p>
+                        <ul class="experience-list">
+                            <li>Built robust data infrastructure (SQL, BigQuery, Sigma Computing) still in use today</li>
+                            <li>Served data needs across entire organization</li>
+                        </ul>
+                    </div>
+
+                    <div class="experience-item">
+                        <div class="experience-header">
+                            <h3 class="experience-title">Growth Lead</h3>
+                            <span class="experience-date">February 2020 - June 2022</span>
+                        </div>
+                        <p class="experience-company">Qeepsake</p>
+                        <ul class="experience-list">
+                            <li>Led marketing efforts during the company's largest 2-year growth period in its history</li>
+                        </ul>
+                    </div>
+
+                    <div class="experience-item">
+                        <div class="experience-header">
+                            <h3 class="experience-title">Marketing Data Analyst</h3>
+                            <span class="experience-date">2018 - 2019</span>
+                        </div>
+                        <p class="experience-company">Wayfair</p>
+                        <ul class="experience-list">
+                            <li>Led Canadian wing of Customer File Retention program (marketing for retention of existing users)</li>
+                        </ul>
                     </div>
 
                 </div>
