Complete Skills section: reorganized with specific examples, added writing sample PDF

--- a/index.html
+++ b/index.html
@@ -125,31 +125,29 @@
                 <div class="section-content">
                     <div class="skills-grid">
                         <div class="skill-category">
-                            <h3 class="skill-category-title">Technical</h3>
+                            <h3 class="skill-category-title">Analytical & Strategic</h3>
                             <ul class="skill-list">
-                                <li>Python</li>
-                                <li>SQL</li>
-                                <li>JavaScript</li>
-                                <li>HTML/CSS</li>
-                                <li>Data Analysis</li>
+                                <li>Strategic decision-making under uncertainty in competitive systems (games, algorithms, markets)</li>
+                                <li>Data analysis and pattern recognition across diverse contexts</li>
+                                <li>Mathematical modeling for real-world applications</li>
+                                <li>Systems-level thinking and architecture design</li>
+                                <li>Iterative problem-solving and process optimization</li>
                             </ul>
                         </div>
                         <div class="skill-category">
-                            <h3 class="skill-category-title">Analytical</h3>
+                            <h3 class="skill-category-title">Communication & Collaboration</h3>
                             <ul class="skill-list">
-                                <li>Mathematics (Abstract Algebra, Analysis)</li>
-                                <li>Strategic Decision-Making</li>
-                                <li>Complex Problem Solving</li>
-                                <li>Systems Thinking</li>
+                                <li>Explaining complex strategic & technical concepts in <a href="content/(9+)%20Customer%20LTV%20Model.pdf" target="_blank" rel="noopener noreferrer">clear, compelling writing</a></li>
+                                <li>Building inclusive and collaborative environments even with distributed teams</li>
+                                <li>Technical documentation and knowledge sharing</li>
                             </ul>
                         </div>
                         <div class="skill-category">
-                            <h3 class="skill-category-title">Professional</h3>
+                            <h3 class="skill-category-title">Technical Tools & Languages</h3>
                             <ul class="skill-list">
-                                <li>Project Architecture</li>
-                                <li>Technical Communication</li>
-                                <li>Independent Research</li>
-                                <li>Rapid Learning</li>
+                                <li>SQL query optimization and database architecture (BigQuery)</li>
+                                <li>Python for simulation, analysis, and automation</li>
+                                <li>Data visualization and business intelligence platforms (Sigma Computing)</li>
                             </ul>
                         </div>
                     </div>
