Complete Links/Connect section: add real contact info, highlight email, adjust layout

--- a/index.html
+++ b/index.html
@@ -158,20 +158,24 @@
         <!-- Links Section -->
         <section id="links" class="section section-alt">
             <div class="container">
-                <h2 class="section-title">Connect</h2>
+                <h2 class="section-title">Here's how to get in touch with me!</h2>
                 <div class="section-content">
                     <div class="links-grid">
-                        <a href="#" class="link-card" target="_blank" rel="noopener noreferrer">
-                            <h3>Patreon</h3>
-                            <p>Blog and content</p>
-                        </a>
-                        <a href="#" class="link-card" target="_blank" rel="noopener noreferrer">
-                            <h3>Social Media</h3>
-                            <p>Connect online</p>
-                        </a>
-                        <a href="mailto:your.email@example.com" class="link-card">
+                        <a href="mailto:ryanhcondon@gmail.com" class="link-card link-card-highlighted">
+                            <p class="link-note">For professional inquiries:<br></p>
                             <h3>Email</h3>
-                            <p>Get in touch</p>
+                            <p><strong>ryanhcondon@gmail.com</strong></p>
+                        </a>
+                        <a href="https://patreon.com/ryancmtg" class="link-card" target="_blank" rel="noopener noreferrer">
+                            <h3>Patreon</h3>
+                            <p>Strategy writing and essays</p>
+                        </a>
+                        <a href="https://bsky.app/profile/r-condon.bsky.social" class="link-card" target="_blank" rel="noopener noreferrer">
+                            <h3>Bluesky</h3>
+                            <p>Personal social media</p>
+                        </a>
+                        <a href="https://www.linkedin.com/in/ryancondon1/" class="link-card" target="_blank" rel="noopener noreferrer">
+                            <h3>LinkedIn</h3>
                         </a>
                     </div>
                 </div>
