Update MTG experience: correct date to 2024, add Sanctum Bluesky link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="experience-item">
                         <div class="experience-header">
                             <h3 class="experience-title">Professional Magic: The Gathering Player</h3>
-                            <span class="experience-date">2023 - Present</span>
+                            <span class="experience-date">2024 - Present</span>
                         </div>
                         <ul class="experience-list">
                             <li>Top finishes at the highest levels of tournament play:
@@ -101,7 +101,7 @@
                                 </ul>
                             </li>
                             <li>Popular strategy writer & content creator on <a href="https://patreon.com/ryancmtg" target="_blank" rel="noopener noreferrer">Patreon</a></li>
-                            <li>Member of Sanctum of All Admin team, managing a team of 200+ players at all levels of competitive play</li>
+                            <li>Member of <a href="https://bsky.app/profile/sanctumofall.bsky.social" target="_blank" rel="noopener noreferrer">Sanctum of All</a> Admin team, managing a team of 200+ players at all levels of competitive play</li>
                         </ul>
                     </div>
 
