Add testimonials section with photos and links, enhance skills section with writing samples and ML/LLM proficiency, add Discord contact

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#links">Connect</a></li>
             </ul>
         </div>
@@ -108,7 +109,7 @@
                     <div class="experience-item">
                         <div class="experience-header">
                             <h3 class="experience-title">Technical Consultant</h3>
-                            <span class="experience-date">August 2024 - Present</span>
+                            <span class="experience-date">August 2025 - Present</span>
                         </div>
                         <ul class="experience-list">
                             <li>Built Python-based physics simulation lab for testing putt-solving algorithms on real-world greens</li>
@@ -164,7 +165,7 @@
                         <div class="skill-category">
                             <h3 class="skill-category-title">Analytical & Strategic</h3>
                             <ul class="skill-list">
-                                <li>Strategic decision-making under uncertainty in competitive systems (games, algorithms, markets)</li>
+                                <li>Tactical decision-making & risk taking under uncertainty in competitive systems (games, algorithms, markets)</li>
                                 <li>Data analysis and pattern recognition across diverse contexts</li>
                                 <li>Mathematical modeling for real-world applications</li>
                                 <li>Systems-level thinking and architecture design</li>
@@ -175,8 +176,15 @@
                             <h3 class="skill-category-title">Communication & Collaboration</h3>
                             <ul class="skill-list">
                                 <li>Explaining complex strategic & technical concepts in <a href="content/(9+)%20Customer%20LTV%20Model.pdf" target="_blank" rel="noopener noreferrer">clear, compelling writing</a></li>
-                                <li>Building inclusive and collaborative environments even with distributed teams</li>
-                                <li>Technical documentation and knowledge sharing</li>
+                                <li>Cultivating inclusive and collaborative environments even with distributed teams</li>
+                                <li>Team building, recruitment & process documentation for smooth handoffs</li>
+                                <li>Creative, personal & persuasive writing
+                                    <ul class="experience-sublist">
+                                        <li>Advocating for <a href="https://www.patreon.com/posts/120021935" target="_blank" rel="noopener noreferrer">proactive ethics</a> in tournament Magic</li>
+                                        <li>Connecting athletic & analytical performance with <a href="https://www.patreon.com/posts/126736271" target="_blank" rel="noopener noreferrer">body-mind integration</a> through my journey with chronic pain</li>
+                                        <li><a href="https://www.patreon.com/posts/136866956" target="_blank" rel="noopener noreferrer">Balancing</a> intellectual curiosity with personal engagement</li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                         <div class="skill-category">
@@ -184,7 +192,12 @@
                             <ul class="skill-list">
                                 <li>SQL query optimization and database architecture (BigQuery)</li>
                                 <li>Python for simulation, analysis, and automation</li>
-                                <li>Data visualization and business intelligence platforms (Sigma Computing)</li>
+                                <li>Data visualization and business intelligence platforms (<a href="https://www.sigmacomputing.com/" target="_blank" rel="noopener noreferrer">Sigma Computing</a>, <a href="https://chartio.com/" target="_blank" rel="noopener noreferrer">Chartio</a>)</li>
+                                <li>Proficiency working with Machine Learning & LLM-based tools -- Paired with deep understanding of their limitations & drawbacks!
+                                    <ul class="experience-sublist">
+                                        <li>I built this website with the help of <a href="https://cursor.com" target="_blank" rel="noopener noreferrer">Cursor</a>!</li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -192,8 +205,59 @@
             </div>
         </section>
 
+        <!-- Testimonials Section -->
+        <section id="testimonials" class="section section-alt">
+            <div class="container">
+                <h2 class="section-title">Testimonials</h2>
+                <div class="section-content">
+                    <div class="testimonials-grid">
+                        
+                        <div class="testimonial-card">
+                            <blockquote class="testimonial-quote">
+                                "Mature beyond their years, and with an uncanny ability to understand the task and how it folds into business strategy, Ryan has helped us in virtually every area. This includes: Analyzing heaps of data to distill clear + implementable takeaways, vetting better business intelligence software tools, creating process documentation for improving internal systems, helping to recruit new hires, and, most importantly, helping everyone see the forest for the trees by asking questions like, 'is that the most efficient approach to getting the answer?' or 'what's the tradeoff?' Ryan's not afraid to make mistakes, speak their mind, and move quickly--all while deeply valuing and respecting the opinions of their colleagues. Ryan's got the DNA and instinct for stepping up and getting @#$% done on day one."
+                            </blockquote>
+                            <div class="testimonial-author">
+                                <img src="content/DuncanStreet.jpeg" alt="Duncan Street" class="author-photo">
+                                <div class="author-info">
+                                    <p class="author-name"><a href="https://www.linkedin.com/in/duncanstreet" target="_blank" rel="noopener noreferrer">Duncan Street</a></p>
+                                    <p class="author-title">Co-founder of Qeepsake</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="testimonial-card">
+                            <blockquote class="testimonial-quote">
+                                "Any chance I can get to use Ryan's brainpower at our growing startup, I take it. Ryan is bright, a hard worker, a self-starter, a critical thinker, and they're easy to work with. Before taking on a new task they ensure they have the big picture so they can fine tune their approach based on the project's goals. They will push back when a directive or goal isn't clear enough. Ryan is complaint-free when slogging through the inevitable grunt work that comes with most roles. Ryan uses those opportunities to work on documenting and improving business process so the task can be done faster and more accurately in the future, by them or by someone else."
+                            </blockquote>
+                            <div class="testimonial-author">
+                                <img src="content/JeffMcneil.jpeg" alt="Jeff McNeil" class="author-photo">
+                                <div class="author-info">
+                                    <p class="author-name"><a href="https://www.linkedin.com/in/jeffmcneil" target="_blank" rel="noopener noreferrer">Jeff McNeil</a></p>
+                                    <p class="author-title">Co-founder of Qeepsake</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="testimonial-card">
+                            <blockquote class="testimonial-quote">
+                                "I don't how much feedback I can give Ryan that will help them meaningfully improve as a teammate. They are one of the best I have ever worked with. They lead by example, practice what they preach, and their beliefs are usually based on specific testable claims and when those claims are falsified, they react logically. They are calm and at peace when everyone is stressed. They run a good meeting. They set clear, reasonable and effective policies that help people learn effectively. I almost want to tell them to be more aggressive about what they think because it's so great, but their current style seems very effective in practice."
+                            </blockquote>
+                            <div class="testimonial-author">
+                                <img src="content/AndrewElenbogen.jpg" alt="Andrew Elenbogen" class="author-photo">
+                                <div class="author-info">
+                                    <p class="author-name"><a href="https://x.com/Ajelenbogen" target="_blank" rel="noopener noreferrer">Andrew Elenbogen</a></p>
+                                    <p class="author-title">Sanctum of All teammate</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Links Section -->
-        <section id="links" class="section section-alt">
+        <section id="links" class="section">
             <div class="container">
                 <h2 class="section-title">Here's how to get in touch with me!</h2>
                 <div class="section-content">
@@ -214,6 +278,11 @@
                         <a href="https://www.linkedin.com/in/ryancondon1/" class="link-card" target="_blank" rel="noopener noreferrer">
                             <h3>LinkedIn</h3>
                         </a>
+                        <div class="link-card">
+                            <p class="link-note">For Magic questions:<br></p>
+                            <h3>Discord</h3>
+                            <p>Add me: <strong>ryanhcondon</strong></p>
+                        </div>
                     </div>
                 </div>
             </div>
