--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             <ul class="skill-list">
                                 <li>Explaining complex strategic & technical concepts in <a href="content/(9+)%20Customer%20LTV%20Model.pdf" target="_blank" rel="noopener noreferrer">clear, compelling writing</a></li>
                                 <li>Cultivating inclusive and collaborative environments even with distributed teams</li>
-                                <li>Team building, recruitment & process documentation for smooth handoffs</li>
+                                <li>Recruitment, team building & process documentation for smooth handoffs</li>
                                 <li>Creative, personal & persuasive writing
                                     <ul class="experience-sublist">
                                         <li>Advocating for <a href="https://www.patreon.com/posts/120021935" target="_blank" rel="noopener noreferrer">proactive ethics</a> in tournament Magic</li>
