--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <!-- About Section -->
         <section id="about" class="section">
             <div class="container">
-                <h2 class="section-title">About Me!</h2>
+                <h2 class="section-title">About Me</h2>
                 <div class="section-content">
                     <p>Hi! I'm Ryan (I use they/them pronouns, but also comfortable with he or she!).</p>
                     
