Add 'many' to emphasize ML/LLM limitations awareness

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                 <li>SQL query optimization and database architecture (BigQuery)</li>
                                 <li>Python for simulation, analysis, and automation</li>
                                 <li>Data visualization and business intelligence platforms (<a href="https://www.sigmacomputing.com/" target="_blank" rel="noopener noreferrer">Sigma Computing</a>, <a href="https://chartio.com/" target="_blank" rel="noopener noreferrer">Chartio</a>)</li>
-                                <li>Proficiency working with Machine Learning & LLM-based tools -- Paired with deep understanding of their limitations & drawbacks!
+                                <li>Proficiency working with Machine Learning & LLM-based tools -- Paired with deep understanding of their many limitations & drawbacks!
                                     <ul class="experience-sublist">
                                         <li>I built this website with the help of <a href="https://cursor.com" target="_blank" rel="noopener noreferrer">Cursor</a>!</li>
                                     </ul>
